example/lib/src/l10n/errors/app_tr.arb
{
  "@@locale": "tr",
  "error": "Bir hata oluştu",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Beklenmedik bir hata oluştu",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Hata raporu başarıyla gönderildi.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}